Docker support to run the service inside containers

--- a/RedisCart/appsettings.json
+++ b/RedisCart/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "RedisCart": "localhost:5302"
-  }
+  "AllowedHosts": "*"
 }
