--- a/RedisCart/appsettings.Development.json
+++ b/RedisCart/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "RedisCart": "localhost:5302"
   }
 }
